[package]
name = "ilo_console"
version = "0.1.0"
authors = ["Edward Middleton <edward.middleton@vortorus.net>"]
edition = "2018"

[[bin]]
name = "console"
path = "src/bin/console.rs"

[[bin]]
name = "gui-events-dump"
path = "src/bin/gui-events-dump.rs"

[[bin]]
name = "run-rust"
path = "src/bin/run-rust.rs"

[dependencies]
reqwest = { version = '0.10', features = ["native-tls","cookies","json"] }
regex = "1.3"
tokio = { version = '0.2', features = ["macros", "rt-threaded","tcp","dns", "sync", "time"] }
bytes = "0.5"
native-tls = "0.2"
base64 = "0.12"
hex = "0.4"
md5 = "0.7"
rust-crypto = "0.2"
structopt = "0.3"
serde = "1.0"
serde_json ="1.0"
chrono = "0.4"
thiserror = "1.0"
crossbeam-channel = "0.4"
tracing = "0.1"
tracing-subscriber = { version  = "0.2", features = ["env-filter"] }
tracing-futures = "0.2"
anyhow = "1.0"

[build-dependencies]
gl_generator = "0.14"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf", "image", "gfx", "mixer",  "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"
rev = "a0518036077baa4"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
