[package]
name = "ilo_ribcl"
version = "0.1.0"
authors = ["Edward Middleton <edward.middleton@vortorus.net>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_with = "1.6"
serde_json = "1.0"
quick-xml = { version="0.20", features = ["serialize", "encoding"] }
serde-xml-rs = "0.4"
yaserde = "0.4"
yaserde_derive = "0.4"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
reqwest = "0.10"
native-tls = "0.2"
openssl = "0.10"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
structopt = "0.3"
anyhow = "1.0"
regex = "1.3"
Inflector = "0.11"
url = "2.1"
chrono = { version = "0.4", features = ["serde"] }
paste  = "1.0"
itertools = "0.9"
async-recursion = "0.3"
async-trait = "0.1"
base64 = "0.13"
ilo_console = { version = "0.1", path = "../ilo_console" }
ilo_ribcl_derive = { path = "../ilo_ribcl_derive" }
lazy_static = "1.4"
crossterm = "0.18"
tui = { version = "0.13", default-features = false, features = ["crossterm"] }

[features]
default = ["ilo2", "ilo3", "ilo4"]

ilo2 = []
ilo3 = []
ilo4 = []