[package]
name = "ilo_ribcl_derive"
version = "0.1.0"
authors = ["Edward Middleton <edward.middleton@vortorus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
quick-xml = "0.20"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits","derive","printing"] }
Inflector = "0.11"